# wasmprj_template

./: README.md
src/: main.cpp
wasm/: CMakeLists.txt  index.html
